--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.21",
     "material-symbols": "^0.35.2",
     "next": "15.5.3",
+    "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
     "nprogress": "^0.2.0",
     "react": "19.1.0",
